tablet responsive is done

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,3 +10,11 @@
 html {
   scroll-behavior: smooth;
 }
+
+.custom-container {
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+}
